--- a/src/main/resources/static/styles/css/style.css
+++ b/src/main/resources/static/styles/css/style.css
@@ -1,6 +1,63 @@
-h1 {
-    color: navy;
+html, body {
+    margin: 0;
+    padding: 0;
 }
+
+body {
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+header {
+    background-color: #022e51;
+    color: white;
+    font-weight: bold;
+    flex-direction: row;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+    padding-right: 25px;
+    max-height: 50px;
+}
+
+.logoHome a{
+    color: white;
+    text-decoration: none;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+}
+
+nav ul li {
+    margin: 10px 20px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #022e51;
+    color: white;
+    text-align: center;
+    align-items: center;
+    padding: 10px;]
+max-height: 40px;
+}
+
 
 .error {
     color: red;
