--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
-	<head>
-		<meta charset="UTF-8"/>
-		<title>Footer</title>
-		<link href="../../../resources/css/bootstrap.min.css" rel="stylesheet" media="screen" th:href="@{/resources/css/bootstrap.min.css}"/>
-	</head>
-	<body th:fragment="footer" >
-		<div th:align="center">
-			&copy; <span th:text="${#temporals.format(#temporals.createNow(), 'yyyy')}">2024</span>
-			<label>[[#{idioma.Idioma}]]</label>
-			<form method="get">
-				<button type="submit" name="lang" value="en" th:class="${#locale.language == 'en'} ? 'active' : '' ">[[#{idioma.English}]]</button>
-				<button type="submit" name="lang" value="es" th:class="${#locale.language == 'es'} ? 'active' : '' ">[[#{idioma.Español}]]</button>
-				<button type="submit" name="lang" value="it" th:class="${#locale.language == 'it'} ? 'active' : '' ">[[#{idioma.Italiano}]]</button>
-			</form>
-		</div>
-	</body>
-</html>
+<footer th:fragment="footer">
+	&copy; 2024 Company</span>
+	<div>
+		<label>[[#{idioma.Idioma}]]</label>
+		<form method="get">
+			<button name="lang" th:class="${#locale.language == 'en'} ? 'active' : '' " type="submit" value="en">
+				[[#{idioma.English}]]
+			</button>
+			<button name="lang" th:class="${#locale.language == 'es'} ? 'active' : '' " type="submit" value="es">
+				[[#{idioma.Español}]]
+			</button>
+			<button name="lang" th:class="${#locale.language == 'it'} ? 'active' : '' " type="submit" value="it">
+				[[#{idioma.Italiano}]]
+			</button>
+		</form>
+	</div>
+</footer>
