--- a/src/main/resources/templates/presentantion/clientes/viewCliente.html
+++ b/src/main/resources/templates/presentantion/clientes/viewCliente.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>[[#{cliente.view.Title}]]</title>
-	</head>
+	<head th:replace="fragments/head"></head>
 	<body>
-		<div th:replace="fragments/header :: header">&nbsp;</div>
+		<!----------------------------------------------------------------
+		 Header
+		---------------------------------------------------------------- -->
+		<header th:replace="fragments/header :: header">&nbsp;</header>
+		<!----------------------------------------------------------------
+		 Body
+		---------------------------------------------------------------- -->
 		<h1>[[#{cliente.view.Title}]]</h1>
 		<div>
 			<label>[[#{cliente.Id}]]
@@ -22,6 +25,9 @@
 			<br/><br/>
 			<a href="/presentantion/clientes">[[#{action.Back}]]</a>
 		</div>
-		<div th:insert="~{fragments/footer :: footer}"></div>
+		<!----------------------------------------------------------------
+		 Footer
+		---------------------------------------------------------------- -->
+		<footer th:replace="fragments/footer :: footer"></footer>
 	</body>
 </html>
