--- a/src/main/resources/templates/presentantion/clientes/viewCliente.html
+++ b/src/main/resources/templates/presentantion/clientes/viewCliente.html
@@ -10,7 +10,7 @@
 		 Body
 		---------------------------------------------------------------- -->
 		<h1>[[#{cliente.view.Title}]]</h1>
-		<div>
+		<div class="marco">
 			<label>[[#{cliente.Id}]]
 				<input disabled th:field="${cliente.id}"/>
 			</label>
