--- a/src/main/resources/templates/presentantion/productos/viewProducto.html
+++ b/src/main/resources/templates/presentantion/productos/viewProducto.html
@@ -10,7 +10,7 @@
 		 Body
 		---------------------------------------------------------------- -->
 		<h1>[[#{producto.view.Title}]]</h1>
-		<div>
+		<div class="marco">
 			<label>[[#{producto.Type}]]
 				<select disabled th:field="${producto.type}">
 					<option value="1">Product</option>
