--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,13 +9,24 @@
 		<!----------------------------------------------------------------
 		 Body
 		---------------------------------------------------------------- -->
-		<div>
-			<h1>[[#{login.Title}]]</h1>
-			<div>
-				email<input id="emaillogin" name="email" type="email">
-			</div>
-			<a href="main">[[#{login.Login}]]</a>
-		</div>
+		<form th:action="@{/login}" method="post">
+
+			<label>
+				<select name="userType">
+					<option value="Admin-">Admin-</option>
+					<option value="Proveedor-">Proveedor-</option>
+				</select>
+
+				<input type="text" name="id" placeholder="ID" required>
+			</label>
+
+			<label>
+				<input type="password" name="password" placeholder="Password" required>
+			</label>
+
+			<button type="submit">Login</button>
+			<a href="/signup">Not register? Sign up</a>
+		</form>
 		<!----------------------------------------------------------------
 		 Footer
 		---------------------------------------------------------------- -->
