--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,6 +4,7 @@
 		</div>
 		<nav>
 			<ul>
+				<li><a th:href="@{/presentantion/factura/FacturaMain}">[[#{header.Facturas}]]</a></li>
 				<li><a th:href="@{/presentantion/productos}">[[#{header.Products}]]</a></li>
 				<li><a th:href="@{/presentantion/clientes}">[[#{header.Clientes}]]</a></li>
 				<li><a th:href="@{/}">[[#{header.SingOut}]]</a></li>
