--- a/src/main/resources/templates/presentantion/factura/FacturaMain.html
+++ b/src/main/resources/templates/presentantion/factura/FacturaMain.html
@@ -25,9 +25,9 @@
             </label>
 
             <!-- Form Cliente -->
-            <form class="form-Cliente" th:action="@{/nombreCliente}" th:object="${cliente}" method="POST">
-                <span>Nombre Cliente: <span th:text="${nombreC}"></span> </span>
-                <input type="text" name="nombreCliente">
+            <form class="form-Cliente" th:action="@{/clienteID}" th:object="${cliente}" method="POST">
+                <span>ID Cliente: <span th:text="${clienteID}"></span> </span>
+                <input type="text" name="clienteID">
                 <button type="submit" style="width: 70px">Buscar</button>
             </form>
 
@@ -36,6 +36,13 @@
                 <span>Código Producto: <span th:text="${codigoP}"></span> </span>
                 <label><input type="text" name="codigoProduct"></label>
                 <button type="submit" style="width: 70px">Buscar</button>
+            </form>
+
+            <!-- Form Cantidad -->
+            <form class="form-Cantidad" th:action="@{/cantidadProducto}" method="POST">
+                <span>Cantidad Producto:</span>
+                <input type="text" name="cantidadProducto">
+                <button type="submit" style="width: 70px">Agregar</button>
             </form>
 
             <!-- Table Productos -->
@@ -54,12 +61,12 @@
                         <td th:text="${product.code}"></td>
                         <td th:text="${product.description}"></td>
                         <td th:text="${product.price}"></td>
-                        <!--<td th:text="${product.quantity}"></td>-->
-                        <td>
+                        <td th:text="${cantidadP}"></td>
+                       <!-- <td>
                             <a th:href="@{/eliminaProducto(product.id)}" >
                                 <img class="logoX" src="/images/delete.png" height="20" width="20"/>
                             </a>
-                        </td>
+                        </td> -->
                     </tr>
 
                 </table>
