--- a/src/main/resources/templates/presentantion/clientes/createCliente.html
+++ b/src/main/resources/templates/presentantion/clientes/createCliente.html
@@ -10,33 +10,47 @@
 		 Body
 		---------------------------------------------------------------- -->
 		<h1>[[#{cliente.create.Title}]]</h1>
-		<form enctype="multipart/form-data" method="post" th:object="${cliente}" class="marco">
+		<form class="marco" enctype="multipart/form-data" method="post" th:object="${cliente}">
 			<div>
 				<label>[[#{cliente.Id}]]
 					<input th:field="${cliente.id}" th:required="required"/>
-					<button type="submit" name="add" value="add">[[#{action.Search}]]</button>
+					<button name="add" type="submit" value="add">[[#{action.Search}]]</button>
 					<ul>
 						<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('id')}"
 							 th:text="${error}"></li>
-						<li th:if="${error}" class="error" th:text="${error}"></li>
+						<li class="error" th:if="${error}" th:text="${error}"></li>
 					</ul>
 				</label>
 				<label>[[#{cliente.TypeId}]]
-					<input th:readonly="true" th:field="${cliente.typeId}"/>
+					<input th:field="${cliente.typeId}" th:readonly="true"/>
 					<ul>
 						<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('typeId')}"
 							 th:text="${error}"></li>
 					</ul>
 				</label>
 				<label>[[#{cliente.Name}]]
-					<input th:readonly="true" th:field="${cliente.name}"/>
+					<input th:field="${cliente.name}" th:readonly="true"/>
 					<ul>
 						<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('name')}"
 							 th:text="${error}"></li>
 					</ul>
 				</label>
+				<label>[[#{cliente.Direccion}]]
+					<input th:field="${cliente.direccion}" th:readonly="true"/>
+					<ul>
+						<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('direccion')}"
+							 th:text="${error}"></li>
+					</ul>
+				</label>
+				<label>[[#{cliente.Telefono}]]
+					<input th:field="${cliente.telefono}" th:readonly="true"/>
+					<ul>
+						<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('telefono')}"
+							 th:text="${error}"></li>
+					</ul>
+				</label>
 				<label>[[#{cliente.Email}]]
-					<input th:readonly="true" th:field="${cliente.email}"/>
+					<input th:field="${cliente.email}" th:readonly="true"/>
 					<ul>
 						<li th:classappend="${error != null ? 'error' : ''}" th:each="error : ${#fields.errors('email')}"
 							 th:text="${error}"></li>
