--- a/src/main/resources/templates/presentantion/clientes/viewCliente.html
+++ b/src/main/resources/templates/presentantion/clientes/viewCliente.html
@@ -23,6 +23,14 @@
 				<input disabled th:field="${cliente.name}"/>
 			</label>
 			<br/><br/>
+			<label>[[#{cliente.Direccion}]]
+				<input disabled th:field="${cliente.direccion}"/>
+			</label>
+			<br/><br/>
+			<label>[[#{cliente.Telefono}]]
+				<input disabled th:field="${cliente.telefono}"/>
+			</label>
+			<br/><br/>
 			<label>[[#{cliente.Email}]]
 				<input disabled th:field="${cliente.email}"/>
 			</label>
