--- a/src/main/resources/templates/presentantion/factura/FacturaMain.html
+++ b/src/main/resources/templates/presentantion/factura/FacturaMain.html
@@ -6,14 +6,21 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/facturaMain.css}">
 </head>
 <body>
-<div class="container">
-    <!-- Title -->
+<!----------------------------------------------------------------
+		 Header
+		---------------------------------------------------------------- -->
+<header th:replace="fragments/header :: header">&nbsp;</header>
+<!----------------------------------------------------------------
+ Body
+---------------------------------------------------------------- -->
+<!--<div class="container">
+    &lt;!&ndash; Title &ndash;&gt;
     <div class="title">
         <h2>Creando Factura</h2>
     </div>
 
     <div class="d-flex">
-        <!-- Form Factura -->
+        &lt;!&ndash; Form Factura &ndash;&gt;
         <form class="form-Factura" th:action="@{/facturaForm}" th:object="${factura}" method="POST">
             <label>
                 <span>Fecha Emisión<span class="required">*</span></span>
@@ -24,28 +31,28 @@
                 <input type="text" name="code">
             </label>
 
-            <!-- Form Cliente -->
+            &lt;!&ndash; Form Cliente &ndash;&gt;
             <form class="form-Cliente" th:action="@{/clienteID}" th:object="${cliente}" method="POST">
                 <span>ID Cliente: <span th:text="${clienteID}"></span> </span>
                 <input type="text" name="clienteID">
                 <button type="submit" style="width: 70px">Buscar</button>
             </form>
 
-            <!-- Form Producto -->
+            &lt;!&ndash; Form Producto &ndash;&gt;
             <form class="form-Producto" th:action="@{/codigoProducto}" th:object="${product}" method="POST">
                 <span>Código Producto: <span th:text="${codigoP}"></span> </span>
                 <label><input type="text" name="codigoProduct"></label>
                 <button type="submit" style="width: 70px">Buscar</button>
             </form>
 
-            <!-- Form Cantidad -->
+            &lt;!&ndash; Form Cantidad &ndash;&gt;
             <form class="form-Cantidad" th:action="@{/cantidadProducto}" method="POST">
                 <span>Cantidad Producto:</span>
                 <input type="text" name="cantidadProducto">
                 <button type="submit" style="width: 70px">Agregar</button>
             </form>
 
-            <!-- Table Productos -->
+            &lt;!&ndash; Table Productos &ndash;&gt;
             <div class="table-containerProductos">
                 <p class="letraTitulo" ><strong>Productos</strong></p>
                 <table>
@@ -62,18 +69,18 @@
                         <td th:text="${product.description}"></td>
                         <td th:text="${product.price}"></td>
                         <td th:text="${cantidadP}"></td>
-                       <!-- <td>
+                       &lt;!&ndash; <td>
                             <a th:href="@{/eliminaProducto(product.id)}" >
                                 <img class="logoX" src="/images/delete.png" height="20" width="20"/>
                             </a>
-                        </td> -->
+                        </td> &ndash;&gt;
                     </tr>
 
                 </table>
             </div>
         </form>
 
-        <!-- Order Summary -->
+        &lt;!&ndash; Order Summary &ndash;&gt;
         <div class="Yorder">
             <table>
                 <tr>
@@ -100,6 +107,12 @@
             <button type="submit">Guardar</button>
         </div>
     </div>
-</div>
+</div>-->
+
+<!----------------------------------------------------------------
+		 Footer
+		---------------------------------------------------------------- -->
+<footer th:replace="fragments/footer :: footer"></footer>
+
 </body>
 </html>
