--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 		<!----------------------------------------------------------------
 		 Header
 		---------------------------------------------------------------- -->
-		<header th:replace="fragments/header :: header">&nbsp;</header>
+		<header th:replace="fragments/header :: header"></header>
 		<!----------------------------------------------------------------
 		 Body
 		---------------------------------------------------------------- -->
