Boton Back SignUp

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -37,6 +37,7 @@
 				</label>
 				<br/><br/>
 				<button type="submit">[[#{signup.Title}]]</button>
+				<a href="/">[[#{action.Back}]]</a>
 			</form>
 		</div>
 		<!----------------------------------------------------------------
