--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,13 +1,13 @@
 <header th:fragment="header">
-		<div class="logoHome">
-			<a href="/main">[[#{header.Home}]]</a>
+		<div >
+			<a href="/main"><img class="logoHome" src="/images/factura.jpeg" alt=""></a>
 		</div>
-		<nav>
-			<ul>
-				<li><a th:href="@{/presentantion/factura/listaFactura}">[[#{header.Facturas}]]</a></li>
-				<li><a th:href="@{/presentantion/productos}">[[#{header.Products}]]</a></li>
-				<li><a th:href="@{/presentantion/clientes}">[[#{header.Clientes}]]</a></li>
-				<li><a th:href="@{/}">[[#{header.SingOut}]]</a></li>
-			</ul>
+		<nav class="listaHeader">
+
+				<a th:href="@{/presentantion/factura/listaFactura}">[[#{header.Facturas}]]</a>
+				<a th:href="@{/presentantion/productos}">[[#{header.Products}]]</a>
+				<a th:href="@{/presentantion/clientes}">[[#{header.Clientes}]]</a>
+				<a th:href="@{/}">[[#{header.SingOut}]]</a>
+
 		</nav>
 </header>
