--- a/src/main/resources/static/styles/css/style.css
+++ b/src/main/resources/static/styles/css/style.css
@@ -56,7 +56,7 @@ footer {
     color: white;
     text-align: center;
     align-items: center;
-    padding: 10px;]
+    padding: 10px;
 max-height: 40px;
 }
 
@@ -135,6 +135,7 @@ button{
     padding: 1em;
     gap: 0.5em;
     margin: 1em;
+    margin-bottom: 80px;
 }
 
 .marco input, .marco select {
