--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,11 +3,9 @@
 			<a href="/main"><img class="logoHome" src="/images/factura.jpeg" alt=""></a>
 		</div>
 		<nav class="listaHeader">
-
-				<a th:href="@{/presentantion/factura/listaFactura}">[[#{header.Facturas}]]</a>
+				<a th:href="@{/presentantion/factura}">[[#{header.Facturas}]]</a>
 				<a th:href="@{/presentantion/productos}">[[#{header.Products}]]</a>
 				<a th:href="@{/presentantion/clientes}">[[#{header.Clientes}]]</a>
 				<a th:href="@{/}">[[#{header.SingOut}]]</a>
-
 		</nav>
 </header>
