--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,6 @@
 <header th:fragment="header">
 		<div >
-			<a href="/main"><img class="logoHome" src="/images/factura.jpeg" alt=""></a>
+			<a href="/main"><img class="logoHome" src="/images/factura.png" alt=""></a>
 		</div>
 		<nav class="listaHeader">
 
