--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
 					<input name="password" th:placeholder="#{admin.Password}" required type="password">
 				</label>
 				<br/><br/>
-				<button type="submit">[[#{login.Login}]]</button>
+				<button class="boton-create"	type="submit">[[#{login.Login}]]</button>
 				<a href="/signup">[[#{login.SignUp}]]</a>
 			</form>
 		</div>
