--- a/src/main/resources/templates/presentantion/clientes/index.html
+++ b/src/main/resources/templates/presentantion/clientes/index.html
@@ -5,7 +5,7 @@
 
 		<header th:replace="fragments/header :: header">&nbsp;</header>
 
-		<div class="table">
+		<div class="tabla-Cliente">
 			<h1>[[#{cliente.Title}]]</h1>
 			<div class="create">
 				<a class="boton-create" th:href="@{/presentantion/clientes/create}">[[#{action.Create}]]</a>
