--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
 				</label>
 				<br/><br/>
 				<button class="boton-create"	type="submit">[[#{login.Login}]]</button>
-				<a href="/signup">[[#{login.SignUp}]]</a>
+				<a class="boton-create"	href="/signup">[[#{login.SignUp}]]</a>
 			</form>
 		</div>
 		<!----------------------------------------------------------------
