--- a/src/main/resources/templates/presentantion/factura/listaFactura.html
+++ b/src/main/resources/templates/presentantion/factura/listaFactura.html
@@ -14,7 +14,7 @@
 		<div class="tabla-Factura">
 			<h1>[[#{factura.Title}]]</h1>
 			<div class="create">
-				<a th:href="@{/presentantion/factura/create}">[[#{action.Create}]]</a>
+				<a class="boton-create" th:href="@{/presentantion/factura/create}">[[#{action.Create}]]</a>
 			</div>
 
 			<div>
