--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -36,8 +36,8 @@
 					</select>
 				</label>
 				<br/><br/>
-				<button type="submit">[[#{signup.Title}]]</button>
-				<a href="/">[[#{action.Back}]]</a>
+				<button class="boton-create" type="submit">[[#{signup.Title}]]</button>
+				<a class="boton-create" href="/">[[#{action.Back}]]</a>
 			</form>
 		</div>
 		<!----------------------------------------------------------------
