--- a/src/main/resources/templates/presentantion/productos/createProducto.html
+++ b/src/main/resources/templates/presentantion/productos/createProducto.html
@@ -71,8 +71,8 @@
 							 th:text="${error}"></li>
 					</ul>
 				</label>
-				<button type="submit">[[#{action.Submit}]]</button>
-				<a href="/presentantion/productos">[[#{action.Back}]]</a>
+				<button class="boton-create" type="submit">[[#{action.Submit}]]</button>
+				<a class="boton-create" href="/presentantion/productos">[[#{action.Back}]]</a>
 			</div>
 		</form>
 		<!----------------------------------------------------------------
